--- a/Hello.html
+++ b/Hello.html
@@ -3,9 +3,7 @@
 <head>
 <title> MY WEBPAGE! </title>
 </head?>
-[A[A[B[C[C[C[C[C[C[3~
-[A[C[C[C[C[C[C[3[Cd[3~[3~[3~[3~[C[C[[C>
 <body>
-HELLO WORLD
+HELLO WORLD, GOOD MORNING!!!
 </body>
 </html>
